content: primeiro semestre

--- a/index.html
+++ b/index.html
@@ -9,5 +9,17 @@
 </head>
 <body>
     <h1>Ciência da Computação</h1>
+    <details>
+        <summary>Primeiro Semestre</summary>
+        <div>
+            <ul>
+                <li>Algoritmos e Programação</li>
+                <li>Design de Interfaces</li>
+                <li>Introdução à Computação</li>
+                <li>Projeto Integrador I</li>
+                <li>Sistemas Operacionais</li>
+            </ul>
+        </div>
+    </details>
 </body>
 </html>
