content: segundo semestre

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Ciência da Computação</h1>
+
     <details>
         <summary>Primeiro Semestre</summary>
         <div>
@@ -18,6 +19,19 @@
                 <li>Introdução à Computação</li>
                 <li>Projeto Integrador I</li>
                 <li>Sistemas Operacionais</li>
+            </ul>
+        </div>
+    </details>
+
+    <details>
+        <summary>Segundo Semestre</summary>
+        <div>
+            <ul>
+                <li>Linguagem de Programação</li>
+                <li>Lógica para a Computação</li>
+                <li>Matemática Discreta</li>
+                <li>Projeto Integrador II</li>
+                <li>Segurança da Informação</li>
             </ul>
         </div>
     </details>
