content: terceiro semestre

--- a/index.html
+++ b/index.html
@@ -35,5 +35,18 @@
             </ul>
         </div>
     </details>
+
+    <details>
+        <summary>Terceiro Semestre</summary>
+        <div>
+            <ul>
+                <li>Banco de Dados</li>
+                <li>Engenharia de Software</li>
+                <li>Estrutura de Dados</li>
+                <li>Programação Orientada a Objetos</li>
+                <li>Projeto Integrador III</li>
+            </ul>
+        </div>
+    </details>
 </body>
 </html>
