content: quarto semestre

--- a/index.html
+++ b/index.html
@@ -48,5 +48,19 @@
             </ul>
         </div>
     </details>
+
+    <details>
+        <summary>Quarto Semestre</summary>
+        <div>
+            <ul>
+                <li>Arquitetura de Computadores</li>
+                <li>Programação em Banco de Dados</li>
+                <li>Programação para Sistemas Embarcados</li>
+                <li>Projeto de Software</li>
+                <li>Projeto Integrador IV</li>
+                <li>Sistemas Digitais</li>
+            </ul>
+        </div>
+    </details>
 </body>
 </html>
