content: quinto semestre

--- a/index.html
+++ b/index.html
@@ -62,5 +62,18 @@
             </ul>
         </div>
     </details>
+
+    <details>
+        <summary>Quinto Semestre</summary>
+        <div>
+            <ul>
+                <li>Processamento de Imagens</li>
+                <li>Programação Paralela e Distribuída</li>
+                <li>Programação Web</li>
+                <li>Projeto Integrador V</li>
+                <li>Redes e Telecomunicações</li>
+            </ul>
+        </div>
+    </details>
 </body>
 </html>
