content: sexto semestre

--- a/index.html
+++ b/index.html
@@ -75,5 +75,18 @@
             </ul>
         </div>
     </details>
+
+    <details>
+        <summary>Sexto Semestre</summary>
+        <div>
+            <ul>
+                <li>Computação Gráfica</li>
+                <li>Gerenciamento de Infraestrutura de Serviços</li>
+                <li>Linguagens Formais</li>
+                <li>Programação para Dispositivos Móveis</li>
+                <li>Projeto Integrador VI</li>
+            </ul>
+        </div>
+    </details>
 </body>
 </html>
