content: sétimo semestre

--- a/index.html
+++ b/index.html
@@ -88,5 +88,19 @@
             </ul>
         </div>
     </details>
+
+    <details>
+        <summary>Sétimo Semestre</summary>
+        <div>
+            <ul>
+                <li>Compiladores</li>
+                <li>Computador e Sociedade</li>
+                <li>Desenvolvimento de Jogos</li>
+                <li>Inteligência Artificial</li>
+                <li>Projeto de Conclusão de Curso - CC - I</li>
+                <li>Teoria da Computação</li>
+            </ul>
+        </div>
+    </details>
 </body>
 </html>
