content: oitavo semestre

--- a/index.html
+++ b/index.html
@@ -102,5 +102,17 @@
             </ul>
         </div>
     </details>
+
+    <details>
+        <summary>Oitavo Semestre</summary>
+        <div>
+            <ul>
+                <li>Ética e Legislação Profissional</li>
+                <li>Gestão da Inovação</li>
+                <li>Projeto de Conclusão de Curso - CC - II</li>
+                <li>Sistemas Distribuídos</li>
+            </ul>
+        </div>
+    </details>
 </body>
 </html>
