--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ciência da Computação | Disciplinas</title>
     <style>
-<<<<<<< HEAD
         h1 {
             text-align: center;
             font-family: Arial, Helvetica, sans-serif;
@@ -27,8 +26,9 @@
         details {
             width: 23%;
             padding: 1%;
-            font-family: Arial, Helvetica, sans-serif;
-=======
+            font-family: Arial, Helvetica, sans-serif.
+        }    
+        
         header {
             text-align: center;
         }
@@ -36,7 +36,6 @@
         .logo {
             width: 25%;
             align-content: center;
->>>>>>> header
         }
     </style>
 </head>
@@ -151,11 +150,7 @@
                     <li>Sistemas Distribuídos</li>
                 </ul>
             </div>
-<<<<<<< HEAD
         </details>
-=======
-        </details>    
->>>>>>> header
     </div>
 </body>
 </html>
